--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>私のポートフォリオ</title>
+    <title>私のポートフォリオV1</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
